<resources>
    <string name="app_name">OooberDriver</string>
    <string name="google_maps_key" translatable="false">AIzaSyDrn0vVdLHVoVCwEPyg2KlpJ5nOPidSLzk</string>

    <string name="txt_lang">Idioma de la aplicación</string>
    <string name="lang_es">Español</string>
    <string name="lang_en">Ingles</string>

    <string name="btn_homeCreateAcc">Crear Cuenta</string>
    <string name="btn_homeLogIn">Iniciar Sesion</string>

    <string name="txt_hi">Hola de nuevo </string>
    <string name="hint_mail">Correo Electronico </string>
    <string name="hint_password">Contraseña</string>
    <string name="txt_noaccount">¿No tienes cuenta?</string>
    <string name="txt_connect">CONECTARSE</string>
    <string name="txt_Dconnect">DESCONECTARSE</string>
    <string name="txt_createacc">Crear una cuenta</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_Lname">Apellido</string>
    <string name="hint_phone">Telefono</string>
    <string name="hint_confirmpassword">Confirmar Contraseña</string>
    <string name="txt_Doyouhaveaccount">¿Tienes Cuenta?</string>
    <string name="txt_LogIn">Iniciar Sesion</string>
    <string name="txt_LogInwithemail">Iniciar Sesion Con Correo</string>
    <string name="txt_LogInwithgoogle">Iniciar Sesion Con Google</string>
    <string name="txt_LogInwithfacebook">Iniciar Sesion Con Facebook</string>
    <string name="txt_FirstTime">¿Es la primera vez que visitas Ooober?</string>
    <string name="txt_setLanguage">Guardar</string>
    <string name="txt_tLanguage">Seleccionar Lenguaje</string>
    <string name="m_registerE">Registro Exitoso</string>
    <string name="m_error">Ocurrio un error al almacenar los datos del usuario</string>
    <string name="m_registerF">Registro Fallido</string>
    <string name="m_Iname">Ingresa tu Nombre</string>
    <string name="m_Ilastname">Ingresa tu Apellido</string>
    <string name="m_Iemail">Ingresa tu Correo Electronico</string>
    <string name="m_Iphone">Ingresa tu Telefono</string>
    <string name="m_Ipassword">Ingresa tu Contraseña</string>
    <string name="m_Icpassword">Ingresa la confirmacion de tu Contraseña</string>
    <string name="m_Isamepassword">Las contraseñas deben coincidir</string>
    <string name="m_Isizepassword">La contraseña debe contener al menos seis caracteres</string>
    <string name="m_errorSignIn">Error al iniciar sesion</string>
    <string name="m_errorSignIn2">Ocurrio  un error al ingresar</string>
    <string name="txt_LogInwithGithub">Iniciar Sesión con Github</string>
    <string name="txt_exit">SALIR</string>
    <string name="txt_Requets">SOLICITUD DE VIAJE</string>
    <string name="txt_falsestreet">Calle falsa</string>
    <string name="txt_origin">Origen</string>
    <string name="txt_destination">Destino</string>
    <string name="txt_timeanddistance">Tiempo y distancia</string>
    <string name="botom_accept">Aceptar</string>
    <string name="botom_cancel">Cancelar</string>
    <string name="txt_qualify">CALIFICA A TU CLIENTE</string>
    <string name="txt_from">DESDE</string>
    <string name="txt_TO">HASTA</string>
    <string name="txt_falseandtrip">Calle falsa con carrera falsa</string>
    <string name="txt_upperdistance">DISTANCIA Y TIEMPO DEL VIAJE</string>
    <string name="txt_price">PRECIO</string>
    <string name="TXT_qualify">CALIFICAR</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="txt_username">NOMBRE DE USUARIO</string>
    <string name="txt_pickplace">Lugar de recogida</string>
    <string name="txt_tripdate">Fecha del viaje</string>
    <string name="txt_Qobteined">Calificacion Obtenida</string>
    <string name="txt_customerrating">Calificacion del Cliente</string>
    <string name="txt_travelcost">Costo Del Viaje</string>
    <string name="txt_elapsedtime">Tiempo transcurrido:</string>
    <string name="txt_totaldistance">Distancia Total:</string>
    <string name="txt_starttrip">INICIAR VIAJE</string>
    <string name="txt_finishtrip">FINALIZAR VIAJE</string>
    <string name="txt_userprofileUpper">PERFIL DE USUARIO</string>
    <string name="txt_carbrand">Marca del vehículo</string>
    <string name="txt_carcolor">Color del Carro</string>
    <string name="txt_vehicleplate">Placa del vehículo</string>
    <string name="txt_update">Actualizar Informacion</string>
    <string name="txt_userprofilename">Nombre del Usuario</string>
    <string name="txt_profile">Perfil</string>
    <string name="txt_Historial">Historial</string>
    <string name="txt_logout">Cerrar Sesion</string>
    <string name="txt_pickupin">Recoger en</string>
    <string name="txt_taketo">Llevar a</string>
    <string name="txt_customer">Cliente</string>
    <string name="txt_customername">Nombre del Cliente</string>
    <string name="txt_userprofile">PERFIL DEL USUARIO</string>
    <string name="txtTitlehistories">Historial de Viajes</string>
    <string name="txtToastIdHistoryNull">El id del historial es nulo</string>
    <string name="txtToastFailedToUpdateRating">Error al actualizar la calificación</string>
    <string name="txtToastNoRecordFound">No se encontró un historial</string>
    <string name="txtToastUpdatedData">Datos actualizados correctamente</string>
    <string name="txtToastFailedToUpdateInformation">No se pudo actualizar la información</string>
    <string name="txtToastThisAccountIsClientType">Esta cuenta es de tipo cliente</string>
    <string name="txtRelativeTimeMomentAgo">Hace un momento</string>
    <string name="txtOneMinuteAgo">Hace un minuto</string>
    <string name="txtXMinutesAgo">minutos atrás</string>
    <string name="txtOneHourAgo">Hace una hora</string>
    <string name="txtHoursAgo">horas atrás</string>
    <string name="txtYesterday">Ayer</string>
    <string name="txtDaysAgo">días atrás</string>
    <string name="txtToastFailedToUplaoded">No se pudo cargar la información</string>
    <string name="txtToastNearbyToPickUp">Debes estar más cerca a la poisción de recogida</string>
    <string name="txtOneMomentAgo">Hace un momento</string>

    <string name="txt_fogotPass">Olvide mi contraseña</string>
    <string name="txt_btnResetPass">Reset contraseña</string>
    <string name="txt_resetPassMailSent">Se envio un correo a</string>
    <string name="txt_VerifyEmail">Enviar verificacion al correo.</string>
    <string name="txt_emailforgot">Restablecer la contraseña</string>
    <string name="txt">Escribe la dirección de correo electronico asociada a tu cuenta y te enviaremos un enlace para que puedas restablecer tu contraseña.</string>


</resources>